const i32 MAX_VALUE = 1000
typedef i32 MyInt
